# AdventOfCode2021

./: Cargo.toml
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs
aoc-lib/src/utils/: field2d.rs  mod.rs
day-1/: Cargo.toml
day-1/benches/: bench.rs
day-1/src/: main.rs
day-10/: Cargo.toml
day-10/benches/: bench.rs
day-10/src/: main.rs
day-11/: Cargo.toml
day-11/benches/: bench.rs
day-11/src/: main.rs
day-12/: Cargo.toml
day-12/benches/: bench.rs
day-12/src/: main.rs
day-13/: Cargo.toml
day-13/benches/: bench.rs
day-13/src/: main.rs
day-14/: Cargo.toml
day-14/benches/: bench.rs
day-14/src/: main.rs
day-15/: Cargo.toml
day-15/benches/: bench.rs
day-15/src/: main.rs
day-16/: Cargo.toml
day-16/benches/: bench.rs
day-16/src/: main.rs
day-17/: Cargo.toml
day-17/benches/: bench.rs
day-17/src/: main.rs
day-18/: Cargo.toml
day-18/benches/: bench.rs
day-18/src/: main.rs
day-19/: Cargo.toml
day-19/benches/: bench.rs
day-19/src/: main.rs
day-2/: Cargo.toml
day-2/benches/: bench.rs
day-2/src/: main.rs
day-20/: Cargo.toml
day-20/benches/: bench.rs
day-20/src/: main.rs
day-21/: Cargo.toml
day-21/benches/: bench.rs
day-21/src/: main.rs
day-22/: Cargo.toml
day-22/benches/: bench.rs
day-22/src/: main.rs
day-23/: Cargo.toml
day-23/benches/: bench.rs
day-23/src/: main.rs
day-3/: Cargo.toml
day-3/benches/: bench.rs
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/benches/: bench.rs
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/benches/: bench.rs
day-5/src/: main.rs
day-6/: Cargo.toml
day-6/benches/: bench.rs
day-6/src/: main.rs  main_unstable.rs
day-7/: Cargo.toml
day-7/benches/: bench.rs
day-7/src/: main.rs
day-8/: Cargo.toml
day-8/benches/: bench.rs
day-8/src/: main.rs
day-9/: Cargo.toml
day-9/benches/: bench.rs
day-9/src/: main.rs
