[package]
name = "day-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-lib = { path = "../aoc-lib" }
petgraph = "0.6.0"
tinyvec = { version = "1.5.1", features = ["rustc_1_40", "alloc"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
