[package]
name = "day-13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-lib = { path = "../aoc-lib" }
cfg-if = "1.0.0"
either = "1.6.1"
rustc-hash = "1.1.0"
tinyvec = { version = "1.5.1", features = ["rustc_1_40"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
