[package]
name = "day-16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-lib = { path = "../aoc-lib" }
bumpalo = {version = "3.8.0", features = ["boxed", "collections"]}
hex = "0.4.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
