[package]
name = "day-19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-lib = { path = "../aoc-lib" }
heapless = "0.7.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
